--- a/src/styles/Work.module.css
+++ b/src/styles/Work.module.css
@@ -80,7 +80,7 @@
 
     .descContainer {
         width: 100vw;
-        padding-top: 9rem;
+        padding-top: 12rem;
         padding-inline: clamp(1.2rem, -1.0799999999999998rem + 12.16vw, 5rem);
         padding-bottom: 4rem;
     }
@@ -88,7 +88,7 @@
     .projectContainer {
         width: 100vw;
         padding-inline: clamp(1.2rem, -1.0799999999999998rem + 12.16vw, 5rem);
-        padding-bottom: 1rem;
+        padding-bottom: 6rem;
     }
 
     .projectName {
